--- a/web/Estilos/estiloSolicitudCuenta.css
+++ b/web/Estilos/estiloSolicitudCuenta.css
@@ -11,12 +11,12 @@ and open the template in the editor.
     position: relative;
     width: 500px;
     margin: 0 auto;
-    top: 100px;
+    top: 50px;
     
 }
 
 #tituloCreacionCuenta{
-    background-color: #191970;
+    background-color: #102b70;
     border-radius: 3px;
     color: white;
 }
