--- a/web/Estilos/estiloLogin.css
+++ b/web/Estilos/estiloLogin.css
@@ -1,43 +1,54 @@
-*
-{
-   padding:0%;
-   border:0%;
-   margin: 2.5%;
-   background:white;
-}
+
 .main #principal
 {   
-    
-  background: white; 
-  margin: 0 auto;
-  width: 50%;
-  height: 50%;  
-  border-radius: 10px;
-  align-items: center;
-  padding-bottom: 1px;
-  box-shadow: 2px 2px 5px black;
+    position: relative;
+    top: 50px;
+    background: white; 
+    margin: 0 auto;
+    width: 30%;
+    height: 350px;  
+    border-radius: 10px;
+    align-items: center;
+    padding-bottom: 1px;
+    box-shadow: 2px 2px 5px black;
 }
 
 #cuadroInterior
 {
-font-family: serif;
-font-size: medium;
-text-align: center;
-background:#191970; 
-color:white;
-height: 30px;
-margin: 0 auto; 
-border-top-left-radius: 10px;
-border-top-right-radius: 10px;
+    font-family: serif;
+    font-size: 20px;
+    text-align: center;
+    background:#191970; 
+    color:white;
+    height: 30px;
+    margin: 0 auto; 
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 #input
 {
     width: 150px;
 }
+
 #output
 {
- padding-right: 10px;
- width: 200px;
+    padding-right: 10px;
+    width: 200px;
 }
 
 
+.inputs{
+    width: 330px; 
+    margin: 0 auto;
+    position: relative;
+    top: 5px;
+}
+
+#imgLogo{
+    margin-left: 5%; 
+    border-radius: 25px; 
+    padding: 5px; 
+    position: relative; 
+    top: 10px;
+    border: 4px solid white;
+}
