--- a/web/Estilos/estiloNuevaCuenta.css
+++ b/web/Estilos/estiloNuevaCuenta.css
@@ -1,10 +1,4 @@
-*
-{
-   padding:0%;
-   border:0%;
-   margin-top: 3%;
-   background:white;
-}
+
 .main #principal
 {   
   background: white; 
@@ -34,7 +28,17 @@ border-top-right-radius: 10px;
 {
 margin:2%;
 }
+
 .dropdown
 {
  margin-right: 1%;
+}
+
+#imgLogo{
+    margin-left: 5%; 
+    border-radius: 25px; 
+    padding: 5px; 
+    position: relative; 
+    top: 10px;
+    border: 4px solid white;
 }
