--- a/web/Estilos/estiloNuevaCuenta.css
+++ b/web/Estilos/estiloNuevaCuenta.css
@@ -1,44 +1,33 @@
-
-.main #principal
-{   
-  background: white; 
-  margin: 0 auto;
-  margin-bottom :1%;
-  width: 70%;
-  height: 100%;  
-  border-radius: 10px;
-  align-items: center;
-  padding-bottom: 2px;
-  box-shadow: 2px 2px 5px black;
-}
-
-#cuadroInterior
-{
-font-family: serif;
-font-size: medium;
-text-align: center;
-background:#191970; 
-color:white;
-height: 30px;
-margin: 0 auto; 
-border-top-left-radius: 10px;
-border-top-right-radius: 10px;
-}
-#form
-{
-margin:2%;
-}
-
-.dropdown
-{
- margin-right: 1%;
-}
-
 #imgLogo{
     margin-left: 5%; 
     border-radius: 25px; 
     padding: 5px; 
     position: relative; 
-    top: 10px;
+    top: 6px;
     border: 4px solid white;
+}
+
+#formNuevaCuenta{
+/*    background-color: red;*/
+    position: relative;
+    top: 20px;
+    border-radius: 10px;
+    align-items: center;
+    padding-bottom: 3px;
+    box-shadow: 2px 2px 5px black;
+    height: 400px;
+    
+}
+
+#cuadroInterior
+{
+    font-family: serif;
+    font-size: 20px;
+    text-align: center;
+    background:#102b70; 
+    color:white;
+    height: 30px;
+    position: relative;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;        
 }
