--- a/web/Estilos/estiloMantenimientos.css
+++ b/web/Estilos/estiloMantenimientos.css
@@ -16,3 +16,18 @@ and open the template in the editor.
     top: 6px;
     border: 4px solid white;
 }
+
+.boton_personalizado{
+    text-decoration: none;
+    padding: 10px;
+    font-weight: 600;
+    font-size: 20px;
+    color: #ffffff;
+    background-color: #1883ba;
+    border-radius: 6px;
+    border: 2px solid #0016b0;
+  }
+  .boton_personalizado:hover{
+    color: #1883ba;
+    background-color: #ffffff;
+  }
