--- a/web/Estilos/estiloNuevaCuenta.css
+++ b/web/Estilos/estiloNuevaCuenta.css
@@ -15,7 +15,8 @@
     align-items: center;
     padding-bottom: 3px;
     box-shadow: 2px 2px 5px black;
-    height: 400px;
+    height: 550px;
+    margin-bottom: 50px;
     
 }
 
